// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot renders correctly element1 1`] = `
Model {
  "observers": Array [
    [Function],
  ],
  "state": Object {
    "configuring": 0,
    "draft": 0,
    "flag": true,
    "from": -10000,
    "fromPercent": 0,
    "max": 100,
    "min": 0,
    "progress": true,
    "range": "one",
    "scale": true,
    "start": 0,
    "step": 1,
    "to": -10000,
    "toPercent": 100,
    "view": "horizontal",
  },
}
`;

exports[`snapshot renders correctly element2 1`] = `
Model {
  "observers": Array [
    [Function],
  ],
  "state": Object {
    "configuring": 0,
    "draft": 0,
    "flag": false,
    "from": -10000,
    "fromPercent": 0,
    "max": 50,
    "min": 10,
    "progress": false,
    "range": "one",
    "scale": true,
    "start": 0,
    "step": 10,
    "to": -10000,
    "toPercent": 100,
    "view": "horizontal",
  },
}
`;

exports[`snapshot renders correctly element3 1`] = `
Model {
  "observers": Array [
    [Function],
  ],
  "state": Object {
    "configuring": 1,
    "draft": 0,
    "flag": false,
    "from": -10000,
    "fromPercent": 0,
    "max": 50,
    "min": 10,
    "progress": false,
    "range": "one",
    "scale": false,
    "start": 0,
    "step": 10,
    "to": -10000,
    "toPercent": 100,
    "view": "horizontal",
  },
}
`;
